[package]
name = "pubbers"
version = "0.1.0"
edition = "2021"
authors = ["roudy16"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# catch-all for error propagation TODO: what is "good" error handling in Rust?
anyhow = "1.0"

# program config
config = "0.11"

# logging
flexi_logger = { version = "0.19", features = ["async"] }
log = "0.4"


# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures-lite = "^1.7"

# pubsub clients
redis = "0.21"
lapin = "1.9"

#[dev-dependencies]
async-global-executor = "^2.0"
